opam-version: "2.0"
synopsis: "An OCaml library for category theory and abstract algebra"
maintainer: ["me@risto.codes"]
authors: ["Risto Stevcev"]
license: "BSD-3-Clause"
tags: ["category theory" "abstract algebra" "algebra" "cats"]
homepage: "https://github.com/Risto-Stevcev/bastet"
doc: "https://risto-stevcev.github.io/bastet"
bug-reports: "https://github.com/Risto-Stevcev/bastet/issues"
depends: [
  "ocaml" {>= "4.08"}
  "alcotest" {>= "1.0.1" & with-test}
  "qcheck" {>= "0.13" & < "0.18" & with-test}
  "qcheck-alcotest" {>= "0.13" & < "0.18" & with-test}
  "mdx" {>= "1.6.0" & with-test}
  "bisect_ppx" {>= "2.1.0"}
  "odoc" {>= "1.5.0" & with-doc}
  "mustache" {>= "3.1.0" & with-doc}
  "dune" {dev}
  "melange-compiler-libs" {dev}
  "melange" {dev}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/Risto-Stevcev/bastet.git"
pin-depends: [
  [ "dune.dev" "git+https://github.com/ocaml/dune.git#7533eb9910d773a3c644a8e82e5bb686a3b4cf00" ]
  [ "melange-compiler-libs.dev" "git+https://github.com/melange-re/melange-compiler-libs.git#48ff923f2c25136de8ab96678f623f54cdac438c" ]
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#227b7cb862c4a81f74c19fa051a75005918a18ff" ]
]
